<resources>
    <string name="app_name">TravelBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="nim">NIM</string>
    <string name="phone_number">No Handphone</string>
    <string name="age">Age</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="save">Simpan</string>
    <string name="change">Ubah</string>
    <string name="dummy_name">Ardiansyah</string>
    <string name="dummy_nim">H071221068</string>
    <string name="dummynumber">08962739218</string>
    <string name="dummyage">10</string>



</resources>